--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -12,7 +12,7 @@ skillsGained:
 - skill: Erläutern der Konzepte für relationale Daten in Azure
 - skill: Erläutern der Konzepte für nicht relationale Daten in Azure
 - skill: Identifizieren von Komponenten eines modernen Daten-Warehouses in Azure
-learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
+learningPartnersLink: /learn/certifications/partners
 locales:
 - en
 levels:
@@ -55,25 +55,25 @@ outlineSection: |-
   ### Modul 2&#58; Untersuchen relationaler Daten in Azure
   Die Teilnehmer lernen die Grundlagen von Datenbankkonzepten in einer Cloud-Umgebung kennen, erhalten grundlegende Kenntnisse in Cloud-Datendiensten und bauen ihre grundlegenden Kenntnisse über Cloud-Datendienste in Microsoft Azure auf. Die Teilnehmer werden Angebote für relationale Daten untersuchen, relationale Datenbanken bereitstellen und einsetzen sowie relationale Daten über Cloud-Datenlösungen mit Azure abfragen.
   #### Lektionen
-  - Untersuchen Sie relationale Datenangebote in Azure
-  - Informieren Sie sich über die Bereitstellung und den Einsatz relationaler Datenbankangebote in Azure
+  - Erkunden Sie relationale Daten-Services in Azure
+  - Untersuchen Sie die Bereitstellung und Bereitstellung relationaler Datenbankservices in Azure 
   - Abfragen relationaler Daten in Azure
 
   Nach Abschluss dieses Moduls können die Schüler&#58;
-  - Beschreiben Sie relationale Datenangebote in Azure
+  - Beschreiben relationaler Datenservices in Azure
   - Erläutern Sie die Bereitstellung und Bereitstellung relationaler Datenbanken in Azure
   - Abfragen relationaler Daten über Cloud-Datenlösungen in Azure
 
 
   ### Modul 3&#58; Untersuchen nicht-relationaler Daten in Azure
-  Die Teilnehmer lernen die Grundlagen von Datenbankkonzepten in einer Cloud-Umgebung kennen, erhalten grundlegende Kenntnisse in Cloud-Datendiensten und bauen ihre grundlegenden Kenntnisse über Cloud-Datendienste in Azure auf. Teilnehmer werden nicht-relationale Datenangebote untersuchen, nicht-relationale Datenbanken sowie nicht-relationale Datenspeicher für Microsoft Azure bereitstellen und einsetzen.
+  Die Teilnehmer lernen die Grundlagen von Datenbankkonzepten in einer cloud-Umgebung kennen, erhalten grundlegende Kenntnisse in cloud-Daten-Services und erweitern ihre grundlegenden Kenntnisse über cloud-Daten-Services in Azure. Teilnehmer werden nicht-relationale Datenangebote untersuchen, nicht-relationale Datenbanken sowie nicht-relationale Datenspeicher für Microsoft Azure bereitstellen und einsetzen.
   #### Lektionen
-  - Untersuchen Sie nicht relationale Datenangebote in Azure
+  - Untersuchen Sie nicht-relationale Daten-Services in Azure
   - Untersuchen Sie die Bereitstellung und den Einsatz nicht-relationaler Datendienste in Azure
   - Verwalten Sie nicht-relationale Datenspeicher in Azure
 
   Nach Abschluss dieses Moduls können die Schüler&#58;
-  - Beschreiben Sie nicht-relationale Datenangebote in Azure
+  - Beschreiben nicht-relationaler Daten-Services in Azure
   - Erläutern Sie die Bereitstellung und den Einsatz nicht-relationaler Datenbanken in Azure
   - Beschreiben Sie nicht-relationale Datenspeicher in Azure
 
