--- a/learn-certs-pr/d365-functional-consultant-sales.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales.yml
@@ -4,9 +4,10 @@ metadata:
   title: 'Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
   description: 'Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.'
 uid: certification.d365-functional-consultant-sales
+certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div><div><strong> PRÜFUNG <a href="/learn/certifications/exams/mb-200">MB-200</a> WIRD DURCH EINE NEUE PRÜFUNG <a href="/learn/certifications/exams/pl-200">PL-200 </a>ERSETZT. Sie können diese Zertifizierung erwerben, indem Sie MB-200 oder PL-200 plus MB-210 bestehen, bevor MB-200 am 31. Dezember 2020 eingestellt wird.Nach der Einstellung von MB-200 müssen Sie PL-200 und MB-210 bestehen, um diese Zertifizierung zu erhalten. Hinweis: Die Prüfungen werden um 23:59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div></div>
 
   Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
 subTitle: Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
