--- a/learn-certs-pr/exams/70-537.yml
+++ b/learn-certs-pr/exams/70-537.yml
@@ -7,7 +7,7 @@ uid: exam.70-537
 displayName: 70-537
 summary: |-
   <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23:59 Uhr (Ortszeit) eingestellt.Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Eine Ersatzprüfung, <a href='/learn/certifications/exams/AZ-600'>AZ-600</a>, ist verfügbar und für das folgende neue Microsoft-Certified erforderlich: Azure Stack Hub Operator Associate-Zertifizierung.<br/><br/></strong></div>
   </div>
 
   Kandidaten für diese Prüfung sind Azure-Administratoren und Azure-Stack-Hub Betreiber, die Azure-Stack Hub nutzen, um ihren Endbenutzern oder Kunden Cloud-Dienste innerhalb ihres eigenen Rechenzentrums zur Verfügung zu stellen.
