--- a/learn-certs-pr/exams/mb-800.yml
+++ b/learn-certs-pr/exams/mb-800.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: 'Microsoft Dynamics 365 Business Central Functional Consultant (beta)'
+title: 'Microsoft Dynamics 365 Business Central Functional Consultant'
 metadata:
-  title: 'Exam MB-800: Microsoft Dynamics 365 Business Central Functional Consultant (beta)'
-  description: 'Exam MB-800: Microsoft Dynamics 365 Business Central Functional Consultant (beta)'
+  title: 'Exam MB-800: Microsoft Dynamics 365 Business Central Functional Consultant'
+  description: 'Exam MB-800: Microsoft Dynamics 365 Business Central Functional Consultant'
 uid: exam.mb-800
 displayName: MB-800
 summary: |-
@@ -15,8 +15,6 @@ summary: |-
   Kandidaten haben über die Business Central-App praktische Kenntnisse über die Erfüllung der Benutzeranforderungen, einschließlich grundlegender Kenntnisse über Finanzmanagement, Verkauf, Einkauf und Inventar.
 
   Kandidaten für diese Prüfung sind normalerweise auf einen oder mehrere Funktionssätze von Business Central spezialisiert. Sie verstehen die Rolle von Business Central in Bezug auf die Dynamics 365-Anwendungssuite.
-
-  <div><strong><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/certification-exams#participating-in-beta-exams">über den Wert und die Bedeutung von Beta-Prüfungen</a></strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Einrichten von Business Central; Finanzdaten konfigurieren; Verkauf und Einkauf konfigurieren; und Business Central-Vorgänge ausführen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSE
