--- a/learn-certs-pr/power-platform-app-maker.yml
+++ b/learn-certs-pr/power-platform-app-maker.yml
@@ -8,7 +8,17 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></font></div>
 
-  Der App-Maker erstellt Lösungen zur Vereinfachung, Automatisierung und Transformation von Aufgaben und Prozessen für sich selbst und sein Team, wobei er über profunde Fachkenntnisse auf dem Gebiet der Lösung verfügt. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
+  Wenn Sie ein Business-Experte mit umfassendem Fachwissen in Ihrem Lösungsbereich sind und Ihre Leidenschaft für die Entwicklung von Microsoft Power Platform-Lösungen nutzen möchten, um Aufgaben und Prozesse für Ihr Team zu vereinfachen, zu automatisieren und zu transformieren, dann ist diese Zertifizierung wie für Sie konzipiert.Sie müssen über die erforderlichen Fähigkeiten verfügen, wichtige technische Aufgaben eines Wirtschaftsanalytikers, wie z.B. Datenmodellierung, grundlegendes UX-Design, Anforderungsanalyse und Prozessanalyse auszuführen. 
+  
+  Sie entsprechen dem Profil für die Rolle eines Anwendungsentwicklers, wenn Sie selbstgesteuert und lösungsorientiert sind, und Sie arbeiten mit den Maker-Tools von Microsoft Power Platform um geschäftliche Probleme zu lösen. Möglicherweise haben Sie Erfahrung mit Visual Basic für Anwendungen, Excel PivotTables, Teams und anderen Tools. Obwohl Sie möglicherweise keine formelle IT-Schulung haben, können Sie problemlos mit IT-Administratoren und Microsoft Power Platform-Entwicklern zusammenarbeiten, um geschäftliche Probleme mit Hilfe der Technologie zu lösen. Sie sind verantwortlich für&#58;
+  - Entwerfen und Erstellen von Apps und Automatisieren von Workflows.
+  - Analysieren und Visualisieren von Daten im Kontext einer App oder eines automatisierten Workflows.
+  - Implementieren und Verwalten von Apps und automatisierten Workflows.
+
+  Weitere Informationen finden Sie in unserem Beitrag&#58; [Sind Sie ein Power Platform App-Entwickler? Jetzt ist es an der Zeit, sich zertifizieren zu lassen](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/are-you-a-power-platform-app-maker-now-s-the-time-to-get/ba-p/1512993). 
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie sich für diese Zertifizierung anmelden, können Sie&#58;
+  - freiwillig bei einem Projekt mithelfen, um praktische Erfahrungen mit Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse oder Prozessanalyse zu sammeln.
+  - Lernpfade in Microsoft Learn erkunden.- sich für einen von einem Dozenten geleiteten Schulungskurs anmelden.
 subTitle: Der App-Maker erstellt Lösungen zur Vereinfachung, Automatisierung und Transformation von Aufgaben und Prozessen für sich selbst und sein Team, wobei er über profunde Fachkenntnisse auf dem Gebiet der Lösung verfügt. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
 levels:
 - intermediate
