--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>PRÜFUNG <a href="/learn/certifications/exams/mb-200">MB-200</a> WIRD DURCH EINE NEUE PRÜFUNG <a href="/learn/certifications/exams/pl-200">PL-200 </a>ERSETZT.Sie können diese Zertifizierung erwerben, indem Sie MB-200 oder PL-200 plus MB-220 bestehen, bevor MB-200 am 31. Dezember 2020 eingestellt wird.Nach der Einstellung von MB-200 müssen Sie PL-200 und MB-220 bestehen, um diese Zertifizierung zu erhalten.Hinweis:Die Prüfungen werden um 23:59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div></div>
+  </div>
 
   Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 subTitle: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
