--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -8,8 +8,7 @@ displayName: MB-200
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am Mittwoch, 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
-  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Eine neue Prüfung, <a href="/learn/certifications/exams/pl-200"> PL-200</a>, wird im September 2020 verfügbar sein. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
+  <div><strong>Diese Prüfung wurde am 31. Dezember 2020 eingestellt.Eine Ersatzprüfung, PL-200, ist verfügbar. Weitere Informationen finden Sie auf der <a href="/learn/certifications/exams/pl-200">Seite mit den PL-200-Prüfungsdetails</a>.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
@@ -18,19 +17,16 @@ summary: |-
 
   Die Kandidaten planen das funktionale Design für Lösungen, setzen einen Application Lifecycle Management (ALM)-Prozess um, migrieren Daten und Objekte aus Legacy-Systemen und externen Systemen, integrieren Power Platform mit anderen Systemen und verwalten die Power Platform-Umgebung.
 
-  <div><strong><br/>Da diese Prüfung am 31. Dezember 2020 eingestellt wird, wird Microsoft Verweise zum „Common Data Service" auf "Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erkennen, Planen und Analysieren, Verwalten von Benutzererfahrungsdesign, Verwalten von Einheiten und Daten, Implementieren von Sicherheit, Implementieren von Integration, und Durchführen von Lösungsimplementierung und -prüfung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxb
 practiceTestUrl: https://www.mindhub.com/p/MU-MB-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-200&examname=Exam%20MB-200:%20Microsoft%20Dynamics%20365%20Customer%20Engagement%20Core&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-200
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Ermittlung, Planung und Analyse durchführen (5-10%)
 - Design zur Benutzererfahrung verwalten (20-25%)
 - Entitäten und Daten verwalten (15-20%)
@@ -47,12 +43,7 @@ products:
 - dynamics-field-service
 - dynamics-customer-service
 exams:
-- uid: exam.mb-210
-- uid: exam.mb-220
-- uid: exam.mb-230
-- uid: exam.mb-240
-courses:
-- uid: course.mb-200t00
+- uid: exam.mb-400
 paths:
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
@@ -63,9 +54,7 @@ paths:
 - uid: learn-bizapps.extend-power-apps-portals
 relatedCertifications:
 - related:
-    uid: certification.d365-functional-consultant-sales
-- related:
-    uid: certification.d365-functional-consultant-customer-service
+    uid: certification.power-apps-and-d365-developer-associate
 resources:
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
