--- a/learn-certs-pr/exams/mb-400.yml
+++ b/learn-certs-pr/exams/mb-400.yml
@@ -8,7 +8,7 @@ displayName: MB-400
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>DIESE PRÜFUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Eine neue Prüfung, <a href="/learn/certifications/exams/pl-400"> PL-400</a>, wird im September 2020 verfügbar sein. Hinweis&#58; Die Prüfungen werden um 23&#58;59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
+  <div><strong>Diese Prüfung wurde am 31. Dezember 2020 eingestellt. Eine Ersatzprüfung, PL-400, ist verfügbar. Weitere Informationen finden Sie auf der <a href="/learn/certifications/exams/pl-400">Seite mit den PL-400-Prüfungsdetails</a>.</strong><br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind Entwickler, die mit Microsoft Power Apps modellbasierten Anwendungen in Dynamics 365 arbeiten, um Dynamics 365-Implementierenen zu entwerfen, zu entwickeln, zu sichern und zu erweitern. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
@@ -17,17 +17,14 @@ summary: |-
 
   Die Kandidaten sollten über Entwicklungserfahrung verfügen, die JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, RESTful Web Services, ASP.NET und Power BI umfasst.
 
-  <div><strong><br/>Da diese Prüfung am 31. Dezember 2020 eingestellt wird, wird Microsoft Verweise zum „Common Data Service" auf "Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: 'Dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erstellen eines technischen Designs, Konfigurieren eines Common Data Service (CDS), Erstellen und Konfigurieren von Power Apps, Konfigurieren der Geschäftsprozessautomatisierung, Erweitern der Benutzererfahrung, Erweitern der Plattform und Entwickeln von Integrationen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42uM0
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-400&examname=Exam%20MB-400:%20Microsoft%20Power Apps%20+%20Dynamics%20365%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-400
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Freitag, 22. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Erstellen eines technischen Designs (10-15%)
 - Konfigurieren des Common Data Service (15-20%)
 - Erstellen und Konfigurieren von Power Apps (10-15%)
@@ -43,8 +40,6 @@ products:
 - dynamics-customer-engagement
 exams:
 - uid: exam.mb-200
-courses:
-- uid: course.mb-400t00
 paths:
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
 - uid: learn-dynamics.introduction-development
