--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -8,7 +8,7 @@ displayName: MB-700
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wurde am 28. September 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 26. Februar 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen und Softwarefunktionen verstehen. Sie führen die Teammitglieder zur Implementierung von Dynamics-Lösungen, mit denen die vordefinierten Implementierungsziele erreicht werden können.
@@ -25,7 +25,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am 28. September 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 26. Februar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Identifizieren von Lösungsanforderungen (30-35%)
 - Entwerfen von Lösungskomponenten (40-45%)
 - Definition von Lösungstest und Managementstrategien (25-30%)
