--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -8,11 +8,10 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>DIESE ZERTIFIZIERUNG WIRD AM 31. DEZEMBER 2020 EINGESTELLT. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://aka.ms/certdashboard">Zertifizierungs-Dashboard angezeigt</a>.</strong><br/><br/></div></div>
+  <div><strong>Diese Zertifizierung wurde eingestellt. Informationen zu derzeit verfügbaren Optionen finden Sie auf der <a href="/learn/certifications/browse/">Seite „Zertifizierungen und Prüfungen durchsuchen"</a>. Alle Zertifizierungen, die Sie vor deren Einstellung erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://aka.ms/certdashboard">Zertifizierungs-Dashboard angezeigt</a>.</strong><br/><br/></div></div>
 
   Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
 
-  <div><strong><br/>Da diese Zertifizierung am 31. Dezember 2020 in den Ruhestand geht, aktualisiert Microsoft die Verweise von "Common Data Service" nicht auf "Microsoft Dataverse".</strong></div> 
 subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich.
 levels:
 - intermediate
@@ -36,9 +35,6 @@ type: role-based
 products:
 - dynamics-365
 - dynamics-customer-engagement
-courses:
-- uid: course.mb-400t00
-- uid: course.mb-200t00
 paths:
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
