--- a/learn-certs-pr/power-platform-developer-associate.yml
+++ b/learn-certs-pr/power-platform-developer-associate.yml
@@ -8,11 +8,18 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong><br/><br/></font></div>
 
-  Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen. Sie implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
-
-  Die Kandidaten müssen über fundierte Kenntnisse der Power Platform-Services verfügen. Die Kandidaten haben ein tiefgreifendes Verständnis ihrer Fähigkeiten, Grenzen und Einschränkungen. Die Kandidaten sollten ein grundlegendes Verständnis der DevOps-Praktiken für Power-Platform haben.
-
-  Ihre Entwicklungserfahrung für diese Rolle sollte Power Platform-Dienste, JavaScript, JSON, TypeScript, C#, HTML, .NET, Microsoft Azure, Microsoft 365, RESTful-Webdienste, ASP.NET und Power BI umfassen.
+  Wenn Sie eine Leidenschaft für das Entwerfen, Entwickeln, Sichern und Erweitern von Microsoft Power Platform-Lösungen haben, ist diese Zertifizierung möglicherweise das Richtige für Sie.Um diese Zertifizierung zu erhalten, müssen Sie in der Lage sein, Lösungskomponenten zu erstellen, einschließlich Anwendungsverbesserungen, benutzerdefinierter Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierter Prozessautomatisierung und benutzerdefinierter Visualisierungen. Sie benötigen fundierte Kenntnisse der Microsoft Power Platform-Servicesund ein grundlegendes Verständnis der DevOps-Praktiken für Microsoft Power Platform. Außerdem sollte Ihr Hintergrund Entwicklungserfahrung mit JavaScript, JSON, TypeScript, C#, HTML, .NET, Azure, Microsoft 365, RESTful web services, ASP.NET, und Power BI umfassen.
+  
+  Kandidaten für diese Zertifizierung arbeiten normalerweise mit App-Entwicklern, Funktionsberatern, Lösungsarchitekten und IT-Administratorenzusammen. Sie haben unterschiedliche Aufgaben, darunter&#58;
+  - technische Designs und Power Apps erstellen.
+  - Dataverse, Power Apps, und Automatisierung von Geschäftsprozessen konfigurieren.
+  - die Plattform und die Benutzererfahrung erweitern.
+  - Integrationen entwickeln.
+  
+  Weitere Informationen finden Sie in unserem Blogbeitrag&#58 [Neue Zertifizierung: Microsoft Power Platform Developer Associate](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/new-certification-microsoft-power-platform-developer-associate/ba-p/1469335). Wenn Sie mehr Erfahrung benötigen, bevor Sie diese Zertifizierung beantragen, können Sie&#58;
+  - freiwillig an einem Microsoft Power Platform-Entwicklungsprojekt teilnehmen, um praktische Erfahrungen zu sammeln.
+  - Lernpfade in Microsoft Learn erkunden.
+  - sich für einen von einem Dozenten geleiteten Schulungskurs anmelden.
 subTitle: Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
 levels:
 - intermediate
