covid notification removed

--- a/learn-certs-pr/exams/az-102.yml
+++ b/learn-certs-pr/exams/az-102.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-102
 displayName: AZ-102
 summary: >-
-  <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM 30. JUNI 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</div>
+  <div><strong>DIESE PRÜFUNG WURDE AM 30. JUNI 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</strong></div>
 
   <br/>
 
