--- a/learn-certs-pr/exams/az-101.yml
+++ b/learn-certs-pr/exams/az-101.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-101
 displayName: AZ-101
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>DIESE PRÜFUNG WURDE AM Mittwoch, 1. Mai 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/></div>
+  <div><strong>DIESE PRÜFUNG WURDE AM Mittwoch, 1. Mai 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></strong></div>
   
   Kandidaten für diese Prüfung sind Azure-Administratoren, die Cloud-Services verwalten, die Speicher-, Sicherheits-, Netzwerk- und Cloud-Funktionen umfassen. Kandidaten haben ein tiefes Verständnis für jeden Service über den gesamten IT-Lebenszyklus hinweg und nehmen Anfragen für Infrastrukturdienste, Anwendungen und Umgebungen entgegen. Sie geben Empfehlungen zur Nutzung von Diensten für eine optimale Leistung und Skalierung sowie zur Bereitstellung, Größe, Überwachung und Anpassung von Ressourcen. Die Kandidaten für diese Prüfung sollten über Kenntnisse in der Verwendung von PowerShell, der Befehlszeilenschnittstelle, dem Azure Portal, ARM-Vorlagen, Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerken verfügen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: sichere Identitäten, Bewertung und Durchführung der Servermigration zu Azure, Implementierung und Verwaltung von Anwendungsdiensten und Implementierung fortschrittlicher virtueller Netzwerke.'
